gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test17868.d
version https://git-lfs.github.com/spec/v1
oid sha256:b72571c2c66c3b5f93a05ed52dfddfb717c87eef3e6489fd958132d4ca931fa2
size 574
